fix visibility on selected url in url list

--- a/theme/all-global-theme-catppuccin-mocha.css
+++ b/theme/all-global-theme-catppuccin-mocha.css
@@ -31,7 +31,7 @@ Custom Icons
     --uc-background-main: rgb(24, 24, 37);
     --uc-background-layered: rgb(17, 17, 27);
     --uc-transparent: rgba(0,0,0,0);
-    --uc-button-selected: rgb(24, 24, 37);
+    --uc-button-selected: rgb(17,17,27);
     --uc-tab-selected-bg: rgb(17,17,27);
     --uc-urlbar-background: rgb(24, 24, 37);
     --uc-panel-background: rgb(17, 17, 27);
